modified all products button to add to cart to match color theme and made cards uniform size to avoid gaps

--- a/public/style.css
+++ b/public/style.css
@@ -35,3 +35,7 @@ form div {
   margin: none;
   padding: none;
 }
+
+.card {
+  height: 600px;
+}
